# offal

./: .gitignore  LICENSE  README.md  pyproject.toml
src/offal/: __init__.py  __main__.py  commands.py  constants.py  main.py  pinned.py
src/offal/commands/: history.py  pin.py  related.py
tests/: test_main.py
